# FastLoop

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  REVIEW_FASTLOOP_2026-04-23.md  package-lock.json  package.json  tsconfig.base.json
docs/: 01-product-brief.md  02-design-brief.md  03-legal-safe-implementation-note.md  04-architecture.md  05-repo-tree.md  06-ui-wireframes.md  07-loop-analysis-pipeline-spec.md  08-ai-reranking-spec.md  09-cep-scaffold.md  10-engine-scaffold.md  11-premiere-adapter-scaffold.md  12-aftereffects-adapter-scaffold.md  13-mock-mode-scaffold.md  14-implementation-roadmap.md  15-task-breakdown.md  16-reference-influence-matrix.md  17-install-load-diagnostic.md  18-cep-rendering-comparison.md  19-shutter-style-ui-redesign.md  20-beta6-qa-and-size-audit.md  21-windows-installer-wizard.md
engine/: README.md  pyproject.toml
engine/fastloop_engine/: __init__.py  cache.py  candidates.py  cli.py  config.py  features.py  models.py  pipeline.py  render.py  render_cli.py  rerank.py  runtime_cli.py  scoring.py  serialize.py  transport.py
engine/fastloop_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
engine/tests/: fixture_builder.py  validate_engine.py  validate_ranking_modes.py  validate_render_actions.py
mock/: index.html  package.json  tsconfig.smoke.json
panel/: host-index.jsx  index.html  package.json  tsconfig.json  tsconfig.smoke.json  vite.config.mjs
release/: CHECKLIST.md  LICENSE-TERMS.txt  README.md  TROUBLESHOOTING.md  release-notes-template.md
scripts/: audit-size.mjs  build-release.mjs  (+13 more)
(+33 files in other folders)
